--- a/package.json
+++ b/package.json
@@ -11,5 +11,50 @@
     "start": "node_modules/.bin/grunt",
     "dist": "node_modules/.bin/grunt"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "autoprefixer": "^6.7.6",
+    "connect-modrewrite": "^0.10.1",
+    "css-byebye": "^1.1.0",
+    "grunt": "^1.0.1",
+    "grunt-angular-templates": "^1.1.0",
+    "grunt-browser-sync": "^2.2.0",
+    "grunt-browserify": "^5.0.0",
+    "grunt-cache-bust": "^1.5.0",
+    "grunt-cli": "^1.2.0",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-contrib-uglify": "^2.2.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-cssnano": "^2.1.0",
+    "grunt-html-build": "^0.6.2",
+    "grunt-jsbeautifier": "^0.2.13",
+    "grunt-notify": "^0.4.5",
+    "grunt-postcss": "^0.8.0",
+    "grunt-sass": "^2.0.0",
+    "grunt-tinypng": "^0.7.0",
+    "grunt-webfont": "^1.6.0",
+    "jit-grunt": "^0.10.0",
+    "jshint-stylish": "^2.2.1",
+    "load-grunt-config": "^0.19.2",
+    "postcss-alias": "^1.0.0",
+    "postcss-assets": "^4.1.0",
+    "postcss-center": "^1.0.0",
+    "postcss-custom-selectors": "^3.0.0",
+    "postcss-size": "^1.1.1",
+    "postcss-sprites": "^4.2.0",
+    "postcss-svg": "^1.0.6",
+    "postcss-verthorz": "^0.6.2",
+    "postcss-vmin": "^2.0.0",
+    "serve-static": "^1.12.1",
+    "time-grunt": "^1.4.0"
+  },
+  "dependencies": {
+    "angular": "^1.6.3",
+    "angular-ui-router": "^0.4.2",
+    "angulartics": "^1.4.0",
+    "angulartics-google-analytics": "^0.4.0",
+    "foundation-sites": "^6.3.1",
+    "modernizr": "^3.3.1"
+  }
 }
