--- a/package.json
+++ b/package.json
@@ -51,10 +51,12 @@
   },
   "dependencies": {
     "angular": "^1.6.3",
+    "angular-parse": "^0.2.2",
     "angular-ui-router": "^0.4.2",
     "angulartics": "^1.4.0",
     "angulartics-google-analytics": "^0.4.0",
     "foundation-sites": "^6.3.1",
+    "hipsum": "^0.2.0",
     "modernizr": "^3.3.1"
   }
 }
